# Smart_Dispute_Canada_Clone

./: .env  .gitignore  .replit  404.html  File_000  File_002  File_003  File_004  File_005  File_006  LICENSE  ObjectionToSupervision.docx  README.md  __init__.py  about.html  app.py  app.yaml  base.html  canlii_api.py  chat.html  dashboard.html  document_generator.py  generate.html  index.html  legal_analyzer.py  login.html  mailing_service.py  main.py  models.py  nixpacks.toml  pricing.html  privacy_policy.html  pyproject.toml  register.html  render.yaml  requirements.txt  routes.py  run.py  run_scraper.py  steps_scraper.py  (+2 more)
hosting/: package-lock.json
scrapers/: steps_to_justice.py
server/: __init__.py  db_setup.py  models.py  routes.py
src/: __init__.py  app.py  manage.py  models.py  test_mail.py  wsgi.py  wsgi.pyv
src/models/: __init__.py  models.py
src/routes/: admin_cases.py  auth_routes.py  main_routes.py
src/scrapers/: ontario_forms.py  steps_scraper.py  unified_scraper.py
src/server/: Payments.py  __init__.py  admin_cases.html  admin_cases.py  admin_routes.py  forms.py  (+17 more)
static/: styles.css
templates/: Review_case.html  about.html  admin_cases.html  analyze.html  base.html  confirm_email.html  create_case.html  dashboard.html  index.html  login.html  register.html  scraped_topics.htm  search.html  uploads.html
utils/: ai_chat.py  canadian_form_scraper.py  canlii_scraper.py  document_generator.py  email_ utility.py  email_utils.py  form_selector  form_selector.py  issue_classifier.py  merit_weight.py  ocr.py  payment_service.py  preview_utils.py
(+45 files in other folders)
